--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       #app {
         width: 100vw;
         height: 100vh;
-        background-color: rgb(45, 45, 45);
+        background-color: rgb(220, 219, 219);
       }
       .wrapper {
         width: 500px;
@@ -31,35 +31,40 @@
         height: 100%;
       }
       .wrapper .a {
-        background-color: rgb(56, 122, 148);
+        background-color: rgb(129, 189, 213);
         clip-path: polygon(56% 5%, 77% 16%, 68% 39%, 56% 37%);
-        animation: a 2s infinite alternate;
+        animation: a 2s ease-in infinite alternate;
       }
       @keyframes a {
         0%,
         10% {
           background-color: rgb(56, 122, 148);
-          clip-path: polygon(56% 5%, 77% 16%, 68% 39%, 56% 37%);
+          clip-path: polygon(
+            56% 5%,
+            56% 5%,
+            77% 16%,
+            68% 39%,
+            56% 37%,
+            56% 37%
+          );
         }
-        /* 20% {
-          clip-path: polygon(86% 5%, 97% 16%, 88% 39%, 76% 37%);
-        }
-        50% {
-          clip-path: polygon(36% 5%, 37% 12%, 38% 20%, 20% 20%);
-        }
-        70% {
-          clip-path: polygon(16% 8%, 17% 7%, 18% 13%, 12% 12%);
-        } */
-        90%,
+        80%,
         100% {
-          background-color: rgb(199, 129, 63);
-          clip-path: polygon(6% 5%, 7% 5%, 10% 10%, 5% 8%);
+          background-color: rgb(220, 133, 133);
+          clip-path: polygon(
+            41% 10%,
+            63% 10%,
+            76% 13%,
+            63% 17%,
+            40% 17%,
+            26% 13%
+          );
         }
       }
       .wrapper .b {
         background-color: rgb(118, 177, 200);
         clip-path: polygon(56% 5%, 29% 10%, 28% 41%, 56% 37%);
-        animation: b 2s infinite alternate;
+        animation: b 2s ease-in infinite alternate;
       }
       @keyframes b {
         0%,
@@ -67,16 +72,16 @@
           background-color: rgb(118, 177, 200);
           clip-path: polygon(56% 5%, 29% 10%, 28% 41%, 56% 37%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(250, 5, 5);
-          clip-path: polygon(80% 80%, 82% 81%, 81% 85%, 78% 84%);
+          background-color: rgb(200, 118, 118);
+          clip-path: polygon(63% 17%, 76% 13%, 76% 26%, 76% 26%);
         }
       }
       .wrapper .c {
         background-color: rgb(16, 58, 75);
         clip-path: polygon(68% 39%, 45% 45%, 28% 41%, 56% 37%);
-        animation: c 2s infinite alternate;
+        animation: c 2s ease-in infinite alternate;
       }
       @keyframes c {
         0%,
@@ -84,16 +89,16 @@
           background-color: rgb(16, 58, 75);
           clip-path: polygon(68% 39%, 45% 45%, 28% 41%, 56% 37%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(47, 64, 75);
-          clip-path: polygon(25% 80%, 30% 76%, 33% 80%, 24% 83%);
+          background-color: rgb(75, 16, 16);
+          clip-path: polygon(76% 13%, 87% 24%, 76% 26%, 76% 26%);
         }
       }
       .wrapper .d {
         background-color: rgb(24, 88, 113);
         clip-path: polygon(68% 39%, 45% 45%, 59% 58%);
-        animation: d 2s infinite alternate;
+        animation: d 2s ease-in infinite alternate;
       }
       @keyframes d {
         0%,
@@ -101,16 +106,16 @@
           background-color: rgb(24, 88, 113);
           clip-path: polygon(68% 39%, 45% 45%, 59% 58%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(0, 0, 0);
-          clip-path: polygon(48% 55%, 52% 50%, 55% 53%);
+          background-color: rgb(113, 24, 24);
+          clip-path: polygon(63% 17%, 76% 26%, 51% 26%);
         }
       }
       .wrapper .e {
         background-color: rgb(98, 160, 185);
         clip-path: polygon(68% 39%, 72% 51%, 59% 58%);
-        animation: e 2s infinite alternate;
+        animation: e 2s ease-in infinite alternate;
       }
       @keyframes e {
         0%,
@@ -118,16 +123,16 @@
           background-color: rgb(98, 160, 185);
           clip-path: polygon(68% 39%, 72% 51%, 59% 58%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(225, 255, 0);
-          clip-path: polygon(78% 55%, 72% 60%, 72% 40%);
+          background-color: rgb(185, 98, 98);
+          clip-path: polygon(63% 17%, 51% 26%, 40% 17%);
         }
       }
       .wrapper .f {
         background-color: rgb(191, 222, 234);
         clip-path: polygon(72% 51%, 85% 52%, 79% 65%, 59% 58%);
-        animation: f 2s infinite alternate;
+        animation: f 2s ease-in infinite alternate;
       }
       @keyframes f {
         0%,
@@ -135,16 +140,16 @@
           background-color: rgb(191, 222, 234);
           clip-path: polygon(72% 51%, 85% 52%, 79% 65%, 59% 58%);
         }
-        90%,
+        80%,
         100% {
-          background-color: transparent;
-          clip-path: polygon(32% 10%, 40% 20%, 38% 18%, 31% 15%);
+          background-color: rgb(234, 191, 191);
+          clip-path: polygon(40% 17%, 26% 26%, 51% 26%, 51% 26%);
         }
       }
       .wrapper .g {
         background-color: rgb(135, 195, 219);
         clip-path: polygon(79% 65%, 85% 52%, 90% 66%);
-        animation: g 2s infinite alternate;
+        animation: g 2s ease-in infinite alternate;
       }
       @keyframes g {
         0%,
@@ -152,16 +157,16 @@
           background-color: rgb(135, 195, 219);
           clip-path: polygon(79% 65%, 85% 52%, 90% 66%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(225, 93, 166);
-          clip-path: polygon(79% 50%, 85% 72%, 74% 66%);
+          background-color: rgb(219, 135, 135);
+          clip-path: polygon(40% 17%, 26% 26%, 26% 13%);
         }
       }
       .wrapper .h {
         background-color: rgb(65, 103, 118);
         clip-path: polygon(79% 65%, 90% 66%, 85% 71%, 75% 71%);
-        animation: h 2s infinite alternate;
+        animation: h 2s ease-in infinite alternate;
       }
       @keyframes h {
         0%,
@@ -169,16 +174,16 @@
           background-color: rgb(65, 103, 118);
           clip-path: polygon(79% 65%, 90% 66%, 85% 71%, 75% 71%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(98, 229, 86);
-          clip-path: polygon(37% 65%, 50% 66%, 58% 71%, 35% 51%);
+          background-color: rgb(118, 65, 65);
+          clip-path: polygon(26% 13%, 26% 26%, 14% 24%, 14% 24%);
         }
       }
       .wrapper .i {
         background-color: rgb(91, 141, 161);
         clip-path: polygon(75% 71%, 35% 69%, 33% 63%, 59% 58%, 79% 65%);
-        animation: i 2s infinite alternate;
+        animation: i 2s ease-in infinite alternate;
       }
       @keyframes i {
         0%,
@@ -186,16 +191,16 @@
           background-color: rgb(91, 141, 161);
           clip-path: polygon(75% 71%, 35% 69%, 33% 63%, 59% 58%, 79% 65%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(233, 207, 181);
-          clip-path: polygon(65% 71%, 25% 69%, 33% 63%, 49% 58%, 59% 65%);
+          background-color: rgb(161, 91, 91);
+          clip-path: polygon(14% 24%, 26% 26%, 26% 26%, 51% 50%, 51% 50%);
         }
       }
       .wrapper .j {
         background-color: rgb(191, 222, 234);
         clip-path: polygon(33% 63%, 45% 45%, 59% 58%);
-        animation: j 2s infinite alternate;
+        animation: j 2s ease-in infinite alternate;
       }
       @keyframes j {
         0%,
@@ -203,16 +208,16 @@
           background-color: rgb(191, 222, 234);
           clip-path: polygon(33% 63%, 45% 45%, 59% 58%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(255, 29, 29);
-          clip-path: polygon(33% 53%, 45% 52%, 59% 58%);
+          background-color: rgb(234, 191, 191);
+          clip-path: polygon(26% 26%, 51% 26%, 51% 50%);
         }
       }
       .wrapper .k {
         background-color: rgb(85, 152, 178);
         clip-path: polygon(45% 45%, 33% 63%, 28% 50%);
-        animation: k 2s infinite alternate;
+        animation: k 2s ease-in infinite alternate;
       }
       @keyframes k {
         0%,
@@ -220,16 +225,16 @@
           background-color: rgb(85, 152, 178);
           clip-path: polygon(45% 45%, 33% 63%, 28% 50%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(169, 4, 106);
-          clip-path: polygon(5% 85%, 13% 73%, 28% 80%);
+          background-color: rgb(178, 85, 85);
+          clip-path: polygon(51% 26%, 76% 26%, 51% 50%);
         }
       }
       .wrapper .l {
         background-color: rgb(44, 88, 110);
         clip-path: polygon(32% 22%, 52% 18%, 38% 23%);
-        animation: l 2s infinite alternate;
+        animation: l 2s ease-in infinite alternate;
       }
       @keyframes l {
         0%,
@@ -237,16 +242,16 @@
           background-color: rgb(44, 88, 110);
           clip-path: polygon(32% 22%, 52% 18%, 38% 23%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(162, 227, 210);
-          clip-path: polygon(42% 22%, 52% 18%, 38% 23%);
+          background-color: rgb(110, 44, 44);
+          clip-path: polygon(76% 26%, 87% 24%, 51% 50%);
         }
       }
       .wrapper .m {
         background-color: rgb(44, 88, 110);
         clip-path: polygon(38% 22%, 40% 22%, 39% 28%, 37% 28%);
-        animation: m 2s infinite alternate;
+        animation: m 2s ease-in infinite alternate;
       }
       @keyframes m {
         0%,
@@ -254,10 +259,10 @@
           background-color: rgb(44, 88, 110);
           clip-path: polygon(38% 22%, 40% 22%, 39% 28%, 37% 28%);
         }
-        90%,
+        80%,
         100% {
-          background-color: rgb(197, 134, 229);
-          clip-path: polygon(8% 22%, 10% 22%, 10% 28%, 1% 28%);
+          background-color: transparent;
+          clip-path: polygon(76% 26%, 87% 24%, 51% 50%, 51% 50%);
         }
       }
     </style>
